--- a/UserPassManagePro/res/layout/frame_menu_detail.xml
+++ b/UserPassManagePro/res/layout/frame_menu_detail.xml
@@ -9,45 +9,6 @@
         android:gravity="center_horizontal"
         android:orientation="vertical" >
 
-        <TextView
-            android:id="@+id/tv_left_userName"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_alignLeft="@+id/textView3"
-            android:layout_alignTop="@+id/imageView1"
-            android:layout_marginLeft="22dp"
-            android:text="*有情人*"
-            android:textAppearance="?android:attr/textAppearanceMedium" />
-
-        <TextView
-            android:id="@+id/textView2"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_alignParentBottom="true"
-            android:layout_alignParentLeft="true"
-            android:drawableTop="@drawable/ic_launcher"
-            android:text="笔记本"
-            android:textAppearance="?android:attr/textAppearanceLarge" />
-
-        <TextView
-            android:id="@+id/textView4"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_alignParentBottom="true"
-            android:layout_alignParentRight="true"
-            android:drawableTop="@drawable/ic_launcher"
-            android:text="Medium Text"
-            android:textAppearance="?android:attr/textAppearanceMedium" />
-
-        <TextView
-            android:id="@+id/textView3"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_alignParentBottom="true"
-            android:layout_centerHorizontal="true"
-            android:drawableTop="@drawable/ic_launcher"
-            android:text="TextView" />
-
         <ImageView
             android:id="@+id/iv_user_icon"
             android:layout_width="80dip"
@@ -55,10 +16,44 @@
             android:layout_above="@+id/textView3"
             android:layout_alignRight="@+id/textView2"
             android:src="@drawable/ic_launcher" />
+
+        <TextView
+            android:id="@+id/tv_left_userName"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignParentTop="true"
+            android:layout_toRightOf="@+id/iv_user_icon"
+            android:text="*有情人*"
+            android:textAppearance="?android:attr/textAppearanceMedium" />
+
+        <TextView
+            android:id="@+id/tv_notepad"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignParentBottom="true"
+            android:layout_alignParentLeft="true"
+            android:layout_marginLeft="36dp"
+            android:drawableTop="@drawable/ic_launcher"
+            android:text="笔 记 本"
+            android:textAppearance="?android:attr/textAppearanceLarge" />
+
+        <TextView
+            android:id="@+id/tv_concern"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignParentRight="true"
+            android:layout_alignTop="@+id/tv_notepad"
+            android:layout_marginRight="43dp"
+            android:drawableTop="@drawable/ic_launcher"
+            android:text="关  注"
+            android:textAppearance="?android:attr/textAppearanceMedium" />
+
     </RelativeLayout>
 
+    <!-- 好友只是用来分享密码等等 -->
+
     <ListView
-        android:id="@+id/lv_menu"
+        android:id="@+id/lv_menu_friend"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_marginTop="150dip" >
