--- a/UserPassManagePro/res/menu/activity_main.xml
+++ b/UserPassManagePro/res/menu/activity_main.xml
@@ -1,9 +1,11 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android" >
 
     <item
-        android:id="@+id/menu_settings"
+        android:id="@+id/menu_actionbar_shared"
+        android:icon="@drawable/ic_launcher"
         android:orderInCategory="100"
-        android:showAsAction="never"
-        android:title="@string/menu_settings"/>
+        android:showAsAction="ifRoom|withText"
+        android:actionProviderClass="android.widget.ShareActionProvider"
+        android:title="@string/share"/>
 
 </menu>
