--- a/UserPassManagePro/res/layout/fragment_content_item.xml
+++ b/UserPassManagePro/res/layout/fragment_content_item.xml
@@ -1,23 +1,42 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:sat="http://schemas.android.com/apk/res/com.example.userpassmanagepro"
     android:id="@+id/menu_frame"
     android:layout_width="match_parent"
     android:layout_height="match_parent" >
 
+    <FrameLayout
+        android:id="@+id/fl_bottom_menu"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content" >
+
+        <GridView
+            android:id="@+id/gridView1"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_below="@+id/vp4_grid"
+            android:layout_centerHorizontal="true"
+            android:numColumns="3" >
+        </GridView>
+
+        <android.view.ext.SatelliteMenu
+            android:id="@+id/satellite_menu"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            android:layout_margin="8dp"
+            sat:closeOnClick="true"
+            sat:expandDuration="500"
+            sat:mainImage="@drawable/ic_launcher"
+            sat:satelliteDistance="170dp"
+            sat:totalSpacingDegree="90" />
+    </FrameLayout>
     <!-- ad -->
+
     <android.support.v4.view.ViewPager
         android:id="@+id/vp4_grid"
         android:layout_width="match_parent"
         android:layout_height="100dip"
-        android:layout_below="@+id/include1" />
-
-    <GridView
-        android:id="@+id/gridView1"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_below="@+id/vp4_grid"
-        android:layout_centerHorizontal="true"
-        android:numColumns="3" >
-    </GridView>
+        android:layout_below="@+id/fl_bottom_menu" />
 
 </RelativeLayout>
