--- a/UserPassManagePro/res/values/dimens.xml
+++ b/UserPassManagePro/res/values/dimens.xml
@@ -2,13 +2,23 @@
 <resources>
 
     <dimen name="adapter_item_height_35">35.0dip</dimen>
-    <dimen name="adapter_item_height_30">30.0dip</dimen>
+    <dimen name="item_default_height_30">30.0dip</dimen>
+    <dimen name="btn_default_width_50">50.0dip</dimen>
     <dimen name="adapter_item_height_25">25.0dip</dimen>
     
     
     <dimen name="adapter_item_width_80">80.0dip</dimen>
     <dimen name="adapter_item_width_150">150.0dip</dimen>
 
-    <dimen name="images_margin_3">3.0dip</dimen>
-    <dimen name="images_margin_5">5.0dip</dimen>
+    <!-- character size setting -->
+    <dimen name="text_size_20">20.0sp</dimen>
+    <dimen name="text_size_18">18.0dp</dimen>
+    <dimen name="text_size_15">15.0sp</dimen>
+    <dimen name="text_size_12">12.0sp</dimen>
+    <dimen name="layout_padd_or_margin_5">5.0dip</dimen>
+    <dimen name="layout_padd_or_margin_15">15.0dip</dimen>
+    <dimen name="layout_padd_or_margin_2">2.0dp</dimen>
+    <dimen name="layout_padd_or_margin_10">10.0dp</dimen>
+    <dimen name="view_default_height_120">120.0dp</dimen>
+    <dimen name="adapter_item_height_40">40.0dp</dimen>
 </resources>
