--- a/UserPassManagePro/res/values/styles.xml
+++ b/UserPassManagePro/res/values/styles.xml
@@ -17,4 +17,13 @@
         <!-- All customizations that are NOT specific to a particular API-level can go here. -->
     </style>
 
+    <style name="button_default_style">
+        <item name="android:layout_width">@dimen/btn_default_width_50</item>
+        <item name="android:layout_height">@dimen/item_default_height_30</item>
+        <item name="android:textColor">#0E0E0E</item>
+        <item name="android:textSize">@dimen/text_size_15</item>
+        <item name="android:background">@drawable/operate_bg</item>
+        <!-- <item name="android:background">@drawable/qa_actionitem_bg</item> -->
+    </style>
+
 </resources>
