--- a/ZakerDemo/res/layout/a_product_design.xml
+++ b/ZakerDemo/res/layout/a_product_design.xml
@@ -1,18 +1,17 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:my="http://schemas.android.com/apk/res/com.siqi.geli"
+    style="@style/AppBaseBackgroup"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical" >
 
     <include layout="@layout/layout_top_bar" />
 
-    <com.siqi.geli.ui.PullToRefreshListView
-        android:id="@+id/prlv_buyer"
-        android:layout_width="fill_parent"
-        android:layout_height="fill_parent"
-        android:cacheColorHint="#00000000"
-        android:clickable="true"
-        my:ptrTag="pl_buyer" />
+    <com.siqiao.sdk.pull_listview.ui.PullToRefreshListView
+        android:id="@+id/prlv_productlist"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent" >
+    </com.siqiao.sdk.pull_listview.ui.PullToRefreshListView>
 
 </LinearLayout>
