--- a/ZakerDemo/res/layout/layout_top_bar.xml
+++ b/ZakerDemo/res/layout/layout_top_bar.xml
@@ -1,9 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    style="@style/AppBaseTitleBackgroup"
     android:layout_width="match_parent"
     android:layout_height="@dimen/layout_item_height_45"
     android:layout_gravity="top"
-    android:background="@color/white"
     android:gravity="center_vertical"
     android:orientation="horizontal"
     android:padding="@dimen/layout_padd_or_margin_2" >
@@ -17,9 +17,9 @@
         android:id="@+id/tv_title"
         android:layout_width="0.0dip"
         android:layout_height="40dip"
-        android:layout_weight="1"
         android:layout_gravity="center"
         android:layout_margin="3dip"
+        android:layout_weight="1"
         android:ellipsize="end"
         android:gravity="center"
         android:singleLine="true"
