--- a/ZakerDemo/res/layout/main.xml
+++ b/ZakerDemo/res/layout/main.xml
@@ -1,13 +1,8 @@
 <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
+    style="@style/AppBaseBackgroup"
     android:layout_width="fill_parent"
     android:layout_height="fill_parent" >
-
-    <com.siqi.geli.main.MyImageView
-        android:id="@+id/rootbg"
-        android:layout_width="fill_parent"
-        android:layout_height="fill_parent"
-        android:scaleType="fitXY" />
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -35,8 +30,8 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_alignParentTop="true"
-                    android:layout_marginLeft="5dp"
-                    android:layout_marginTop="15dp"
+                    android:layout_centerHorizontal="true"
+                    android:layout_marginTop="@dimen/layout_padd_or_margin_15"
                     android:background="@drawable/rootblock_pageinfo_blue_bg"
                     android:gravity="center"
                     android:textColor="@android:color/white"
@@ -56,7 +51,8 @@
                     android:layout_height="wrap_content"
                     android:layout_above="@id/add"
                     android:layout_marginBottom="15dp"
-                    android:background="@drawable/rootblock_set_selector" />
+                    android:background="@drawable/rootblock_set_selector"
+                    android:visibility="invisible" />
 
                 <Button
                     android:id="@+id/appstroe"
@@ -64,7 +60,8 @@
                     android:layout_height="wrap_content"
                     android:layout_above="@id/set"
                     android:layout_marginBottom="15dp"
-                    android:background="@drawable/rootblock_appstroe_selector" />
+                    android:background="@drawable/rootblock_appstroe_selector"
+                    android:visibility="invisible" />
 
                 <Button
                     android:id="@+id/download"
@@ -72,7 +69,8 @@
                     android:layout_height="wrap_content"
                     android:layout_above="@id/appstroe"
                     android:layout_marginBottom="15dp"
-                    android:background="@drawable/rootblock_download_selector" />
+                    android:background="@drawable/rootblock_download_selector"
+                    android:visibility="invisible" />
             </RelativeLayout>
         </LinearLayout>
     </LinearLayout>
