--- a/ZakerDemo/res/values/dimens.xml
+++ b/ZakerDemo/res/values/dimens.xml
@@ -3,12 +3,14 @@
 
     <dimen name="layout_padd_or_margin_2">2.0dp</dimen>
     <dimen name="layout_padd_or_margin_5">5.0dip</dimen>
+    <dimen name="layout_padd_or_margin_7">7.0dp</dimen>
     <dimen name="layout_padd_or_margin_10">10.0dp</dimen>
     <dimen name="layout_padd_or_margin_15">15.0dip</dimen>
     <!-- Default screen margins, per the Android Design guidelines. -->
     <dimen name="activity_horizontal_margin">16dp</dimen>
     <dimen name="activity_vertical_margin">16dp</dimen>
     <dimen name="layout_padd_or_margin_20">20.0dip</dimen>
+    <dimen name="btn_default_height_25">25.0dip</dimen>
     <dimen name="btn_default_height_30">30.0dip</dimen>
     <dimen name="layout_item_height_42">42.0dip</dimen>
     <dimen name="layout_item_height_45">45.0dip</dimen>
