--- a/ZakerDemo/res/values/styles.xml
+++ b/ZakerDemo/res/values/styles.xml
@@ -2,19 +2,27 @@
 
     <!--
         Base application theme, dependent on API level. This theme is replaced
-        by AppBaseTheme from res/values-vXX/styles.xml on newer devices.
+        by AppBaseTheme from res/values-vXX/styles.xml on newer devices.
     -->
     <style name="AppBaseTheme" parent="android:Theme.Light">
         <!--
             Theme customizations available in newer API levels can go in
             res/values-vXX/styles.xml, while customizations related to
-            backward-compatibility can go here.
+            backward-compatibility can go here.
         -->
     </style>
 
     <!-- Application theme. -->
     <style name="AppTheme" parent="AppBaseTheme">
         <!-- All customizations that are NOT specific to a particular API-level can go here. -->
+    </style>
+
+    <!-- Application theme. -->
+    <style name="AppBaseBackgroup" parent="AppBaseTheme">
+        <item name="android:background">@drawable/rootblock_default_bg</item>
+    </style>
+    <style name="AppBaseTitleBackgroup" parent="AppBaseTheme">
+        <item name="android:background">#F17F43</item>
     </style>
 
     <style name="LayoutTransparent">
@@ -25,14 +33,16 @@
     <!-- 标题栏 -->
     <style name="btn_title_default_style">
         <item name="android:layout_width">@dimen/image_normal_widht_60</item>
-        <item name="android:layout_height">30dip</item>
+        <item name="android:layout_height">@dimen/btn_default_height_25</item>
         <item name="android:textColor">@color/white</item>
         <item name="android:padding">2dip</item>
+        <item name="android:layout_marginLeft">@dimen/layout_padd_or_margin_10</item>
         <item name="android:textSize">@dimen/text_size_15</item>
         <item name="android:gravity">center</item>
     </style>
 
     <style name="Image_arrows"></style>
+
     <style name="LinLayout"></style>
     <!-- 箭头标记 右尖角 灰黑色 -->
     <style name="ImageStyle.arrows_no_circle" parent="@style/Image_arrows">
@@ -47,6 +57,51 @@
     <!-- 默认的背景的样式 京东式 -->
     <style name="LinLayout.default_background_jindong">
         <item name="android:background">@color/white_gray_jindong</item>
+    </style>
+    <!-- 联系人 或者其他使用头像的地方的默认背景 -->
+    <style name="image_background_default" parent="@style/Image_arrows">
+        <item name="android:layout_width">60dip</item>
+        <item name="android:layout_height">60dip</item>
+        <item name="android:layout_margin">5dip</item>
+        <item name="android:src">@drawable/nav_head</item>
+        <item name="android:scaleType">centerCrop</item>
+    </style>
+    <!-- 联系人 或者其他使用头像的地方的默认加载背景 -->
+    <style name="image_background_default_pd" parent="@style/Image_arrows">
+        <item name="android:layout_width">60dip</item>
+        <item name="android:layout_height">60dip</item>
+        <item name="android:layout_margin">5dip</item>
+        <item name="android:padding">15dip</item>
+    </style>
+
+    <style name="lv_left_bottom_item">
+        <item name="android:textSize">12sp</item>
+        <item name="android:textColor">#458B74</item>
+        <item name="android:layout_width">wrap_content</item>
+        <item name="android:layout_height">wrap_content</item>
+    </style>
+
+    <style name="lv_left_top_item">
+        <item name="android:textSize">18sp</item>
+        <item name="android:textColor">#000000</item>
+        <item name="android:layout_width">fill_parent</item>
+        <item name="android:layout_height">wrap_content</item>
+    </style>
+    <!-- 商品 或者其他使用与头像无关的地方的默认背景 -->
+    <style name="image_background_default_goods" parent="@style/Image_arrows">
+        <item name="android:layout_width">80dip</item>
+        <item name="android:layout_height">80dip</item>
+        <item name="android:layout_margin">5dip</item>
+        <item name="android:src">@drawable/none_pic</item>
+        <item name="android:scaleType">centerCrop</item>
+    </style>
+
+    <!-- 商品 或者其他使用与头像无关的地方的默认加载背景 -->
+    <style name="image_background_default_goods_pd" parent="@style/Image_arrows">
+        <item name="android:layout_width">80dip</item>
+        <item name="android:layout_height">80dip</item>
+        <item name="android:layout_margin">5dip</item>
+        <item name="android:padding">15dip</item>
     </style>
 
 </resources>
