--- a/UserPassManagePro/res/layout/adap_grid_pass_group.xml
+++ b/UserPassManagePro/res/layout/adap_grid_pass_group.xml
@@ -1,22 +1,48 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:orientation="vertical" >
+    android:layout_height="@dimen/adapter_item_width_80"
+    android:orientation="horizontal" >
+
+    <RelativeLayout
+        android:layout_width="0.0dip"
+        android:layout_height="match_parent"
+        android:padding="@dimen/layout_padd_or_margin_5"
+        android:clickable="true"
+        android:focusable="true"
+        android:layout_weight="1" >
+
+        <ImageView
+            android:id="@+id/iv_icon"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignParentLeft="true"
+            android:layout_alignParentTop="true"
+            android:src="@drawable/icon_qq_off" />
+
+        <TextView
+            android:id="@+id/tv_groupname"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignParentTop="true"
+            android:layout_toRightOf="@+id/iv_icon"
+            android:text="主帐号:"
+            android:textAppearance="?android:attr/textAppearanceMedium" />
+
+        <TextView
+            android:id="@+id/tv_descript"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignLeft="@+id/tv_groupname"
+            android:layout_below="@+id/tv_groupname"
+            android:ellipsize="end"
+            android:text="这是描述" />
+    </RelativeLayout>
 
     <ImageView
-        android:id="@+id/iv_icon"
+        android:id="@+id/imageView1"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_centerHorizontal="true"
-        android:src="@drawable/icon_qq_off" />
+        android:layout_height="match_parent"
+        android:src="@drawable/right" />
 
-    <TextView
-        android:id="@+id/tv_groupname"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_below="@+id/iv_icon"
-        android:layout_centerHorizontal="true"
-        android:text="@string/default_prompt" />
-
-</RelativeLayout>
+</LinearLayout>
