--- a/UserPassManagePro/res/layout/fragment_content_item.xml
+++ b/UserPassManagePro/res/layout/fragment_content_item.xml
@@ -15,25 +15,17 @@
     <FrameLayout
         android:id="@+id/fl_bottom_menu"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content" >
-
-        <GridView
-            android:id="@+id/gridView1"
+        android:layout_height="match_parent" >
+        <com.siqiao.sdk.pull_listview.ui.PullToRefreshListView
+            android:id="@+id/prlv_main_content"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_below="@+id/vp4_grid"
-            android:columnWidth="60dp"
-            android:horizontalSpacing="10dp"
-            android:numColumns="auto_fit"
-            android:padding="@dimen/layout_padd_or_margin_10"
-            android:stretchMode="columnWidth"
-            android:verticalSpacing="@dimen/layout_padd_or_margin_10" >
-        </GridView>
+            android:layout_height="match_parent" >
+        </com.siqiao.sdk.pull_listview.ui.PullToRefreshListView>
 
         <android.view.ext.SatelliteMenu
             android:id="@+id/satellite_menu"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:layout_width="60dp"
+            android:layout_height="75dp"
             android:layout_gravity="left|bottom"
             android:layout_margin="8dp"
             sat:closeOnClick="true"
