--- a/ZakerDemo/res/layout/users_item.xml
+++ b/ZakerDemo/res/layout/users_item.xml
@@ -3,8 +3,7 @@
     android:layout_width="fill_parent"
     android:layout_height="wrap_content"
     android:gravity="center_vertical"
-    android:orientation="vertical"
-    android:padding="@dimen/layout_padd_or_margin_5" >
+    android:orientation="vertical" >
 
     <!-- 以下的LinearLayout为常规的ListItem布局 -->
 
@@ -50,9 +49,9 @@
                 style="@style/lv_left_bottom_item"
                 android:layout_marginTop="@dimen/layout_padd_or_margin_5"
                 android:ellipsize="end"
+                android:singleLine="true"
                 android:text="aaaaaaaa"
-                android:textSize="@dimen/text_size_15"
-                android:singleLine="true" />
+                android:textSize="@dimen/text_size_15" />
         </LinearLayout>
 
         <ImageView
@@ -99,6 +98,9 @@
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
         android:orientation="vertical"
+        android:paddingLeft="@dimen/layout_padd_or_margin_5"
+        android:paddingRight="@dimen/layout_padd_or_margin_5"
+        android:paddingBottom="@dimen/layout_padd_or_margin_5"
         android:visibility="gone" >
 
         <TextView
@@ -106,14 +108,16 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:text="@string/user_email_info"
-            android:textAppearance="?android:attr/textAppearanceMedium" />
+            android:textAppearance="?android:attr/textAppearanceMedium"
+            android:textColor="@color/black" />
 
         <TextView
             android:id="@+id/tv_address"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:text="@string/user_address_info"
-            android:textAppearance="?android:attr/textAppearanceMedium" />
+            android:textAppearance="?android:attr/textAppearanceMedium"
+            android:textColor="@color/black" />
 
         <TextView
             android:id="@+id/tv_weburl"
@@ -123,9 +127,9 @@
             android:drawableRight="@drawable/right"
             android:gravity="center_vertical"
             android:padding="@dimen/layout_padd_or_margin_5"
-            android:textColor="@color/black"
             android:text="@string/user_click_info"
-            android:textAppearance="?android:attr/textAppearanceMedium" />
+            android:textAppearance="?android:attr/textAppearanceMedium"
+            android:textColor="@color/black" />
     </LinearLayout>
 
 </LinearLayout>
