--- a/UserPassManagePro/res/layout/a_add_group.xml
+++ b/UserPassManagePro/res/layout/a_add_group.xml
@@ -3,8 +3,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical" >
-
-    <ScrollView
+      <ScrollView
         android:layout_width="match_parent"
         android:layout_height="0dip"
         android:layout_weight="1" >
@@ -57,28 +56,7 @@
                     android:layout_alignBottom="@+id/et_name"
                     android:layout_alignParentLeft="true"
                     android:layout_marginLeft="@dimen/layout_padd_or_margin_10"
-                    android:text="@string/user_anme"
-                    android:textAppearance="?android:attr/textAppearanceMedium" />
-
-                <EditText
-                    android:id="@+id/et_pass"
-                    style="@style/editView_default"
-                    android:layout_below="@+id/et_name"
-                    android:layout_marginTop="@dimen/layout_padd_or_margin_10"
-                    android:ems="10"
-                    android:hint="@string/user_pass_prompt"
-                    android:inputType="textPassword"
-                    android:paddingLeft="@dimen/adapter_item_width_80" />
-
-                <TextView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_alignBaseline="@+id/et_pass"
-                    android:layout_alignBottom="@+id/et_pass"
-                    android:layout_alignParentLeft="true"
-                    android:layout_marginLeft="@dimen/layout_padd_or_margin_10"
-                    android:layout_marginTop="@dimen/layout_padd_or_margin_10"
-                    android:text="@string/user_pass"
+                    android:text="@string/group_name"
                     android:textAppearance="?android:attr/textAppearanceMedium" />
                 <!-- 关联帐号 -->
 
