--- a/UserPassManagePro/res/layout/fragment_content_item.xml
+++ b/UserPassManagePro/res/layout/fragment_content_item.xml
@@ -16,6 +16,7 @@
         android:id="@+id/fl_bottom_menu"
         android:layout_width="match_parent"
         android:layout_height="match_parent" >
+
         <com.siqiao.sdk.pull_listview.ui.PullToRefreshListView
             android:id="@+id/prlv_main_content"
             android:layout_width="match_parent"
@@ -24,9 +25,9 @@
 
         <android.view.ext.SatelliteMenu
             android:id="@+id/satellite_menu"
-            android:layout_width="60dp"
-            android:layout_height="75dp"
-            android:layout_gravity="left|bottom"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="bottom|right"
             android:layout_margin="8dp"
             sat:closeOnClick="true"
             sat:expandDuration="500"
